--- a/BabalSharji/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/BabalSharji/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -1,3 +1,4 @@
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <%@ page pageEncoding="UTF-8" %>
 <!DOCTYPE html>
 <html>
@@ -12,7 +13,7 @@
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-
+        
         <style type="text/css">
             .thumbnail-anchor {
                 border: none !important;
@@ -25,7 +26,7 @@
                 min-height: 100%;
             }
             body {
-                margin-bottom: 50px;
+                margin-bottom: 70px;
             }
             .footer {
                 position: absolute;
@@ -33,24 +34,6 @@
                 width: 100%;
                 height: 50px;
                 background-color: #f5f5f5;
-            }
-            #loginDialog {
-                border-radius: 20px;
-                border: none;
-            }
-            #loginDialog label {
-                color: #847D7D;
-            }
-            
-            #loginDialog::backdrop {
-                background-color: rgba(0, 0, 0, 0.5);
-            }
-            #loginDialog .input-lg {
-                height: 32px;
-                margin-bottom: 15px;
-            }
-            #loginDialog .btn {
-                height: 32px;
             }
         </style>
     </head>
@@ -68,9 +51,29 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <div class="navbar-right">
-                        <button class="btn btn-success navbar-btn" style="margin-right: 10px;">Place Advertisement</button>
-                        <button class="btn btn-success navbar-btn" onclick="showLoginDialog()">login</button>
-                        <!--<a href="login" class="btn btn-default navbar-btn">login</a>-->
+                        <%
+                            session = request.getSession();
+                            Object id = session.getAttribute("userid");
+                
+                            if(id != null) {
+                                request.setAttribute("authenticateduserid", Integer.parseInt(id.toString()));
+                                request.setAttribute("name", session.getAttribute("name"));
+                            }
+                        %>
+                        <div class="row">
+                        <c:choose>
+                            <c:when test="${authenticateduserid == null}">
+                                <a href="login" class="btn btn-success navbar-btn pull-right">login</a>
+                            </c:when>
+                            <c:otherwise>
+                                <a href="profile" class="btn navbar-btn pull-left">welcome <c:out value="${name}"/></a>
+                                <a href="logout" class="btn btn-success navbar-btn pull-right">logout</a>
+                            </c:otherwise>
+                        </c:choose>
+                        </div>
+                        <div class="row">
+                            <button class="btn btn-success navbar-btn pull-right">Place Advertisement</button>
+                        </div>
                     </div>
                     <div style="margin-top: 65px; padding-bottom: 5px;">
                         <form role="form">
@@ -101,27 +104,3 @@
                 </div>
             </div>
         </div>
-    <dialog class="col-md-4" id="loginDialog">
-        <div class="col-md-offset-1 col-md-10">
-            <form action="submitlogin" method="POST" onsubmit="">
-                <label>email </label><input type="email" name="email"  class="form-control input-lg"/>
-                <label>password </label><input type="password" name="password" class="form-control input-lg"/>
-                <input type="submit" value="login" class="btn btn-success" />
-            </form>            
-        </div>
-    </dialog>
-    <script>
-    function showLoginDialog() {
-        var dialog = document.getElementById("loginDialog");
-        dialog.showModal();
-        dialog.addEventListener('click', function(){
-            var rect = dialog.getBoundingClientRect();
-            var isInDialog=(rect.top <= event.clientY && event.clientY <= rect.top + rect.height
-            && rect.left <= event.clientX && event.clientX <= rect.left + rect.width);
-            if (!isInDialog) {
-                dialog.close();
-            }
-            dialog.removeEventListener('click');
-        });
-    }
-    </script>
